--- a/hostapd/.config
+++ b/hostapd/.config
@@ -29,6 +29,9 @@ CONFIG_DRIVER_NL80211=y
 #LIBS_p += -L/usr/local/lib
 #LIBS_c += -L/usr/local/lib
 
+# Driver interface for drivers using the nl80211ext kernel interface
+CONFIG_DRIVER_NL80211EXT=y
+
 # Driver interface for no driver (e.g., RADIUS server only)
 #CONFIG_DRIVER_NONE=y
 
